fixed spacing on projects paragraph

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -676,7 +676,7 @@ Projects
   font-size: 1.5rem;
 }
 .project-desc {
-  word-spacing: 15px;
+  word-spacing: 5px;
   color: var(--clr-grey-3);
 }
 .project-stack {
